--- a/script/index.css
+++ b/script/index.css
@@ -34,3 +34,10 @@ path {
   stroke: blue;
   stroke-width: 2;
 }
+
+.tooltip {
+  position: absolute;
+  pointer-events: none;
+  background: #000;
+  color: #fff;
+}
